--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,9 +6,7 @@
     <color name="green">#006600</color>
     <color name="grass_green">#478903</color>
     
-    <string name="app_name">Justynas Xmas Chaos</string>
-    <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Christmas Chaos</string>
     
 
 </resources>
